Ensure back-mountain remains behind the left mountain

--- a/14-Penguin/styles.css
+++ b/14-Penguin/styles.css
@@ -22,6 +22,7 @@ body {
     height: 300px;
     background: linear-gradient(rgb(203, 241, 228), rgb(47, 170, 255));
     position: absolute;
+    z-index: 1;
 }
 
 .penguin {
@@ -31,6 +32,7 @@ body {
     margin: 0 auto;
     margin-top: 75px;
 }
+
 .ground {
     width: 100vw;
     height: 400px;
